k8s/plex/plex.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deployment
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: linuxserver/plex
          ports:
            - containerPort: 32400
              protocol: TCP
          volumeMounts:
            - name: config-volume 
              mountPath: /config
            - name: complete-volume
              mountPath: /downloads/complete
      volumes:
        - name: config-volume
          hostPath:
            path: /home/torrents/plex-config
            type: DirectoryOrCreate
        - name: complete-volume
          hostPath:
            path: /home/torrents/downloads/complete
            type: DirectoryOrCreate
---

apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: plex
spec:
  selector:
    app: plex
  ports:
    - name: plex-port
      protocol: TCP
      port: 32400
      targetPort: 32400

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/ingress.class: public
spec:
  tls:
    - hosts:
        - plex.chunk.lol
      secretName: plex-tls
  rules:
    - host: plex.chunk.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
